@@ -5,6 +5,8 @@
 		<setting id="hostOrIp" type="text" label="51002" default="my-server" />
 	</category>
 	<category label="54000">
+		<setting id="separator" type="lsep" label="54001"/>
+		<setting type="sep"/>
 		<setting id="separator" type="lsep" label="54010"/>
 		<setting id="autostart" type="bool" label="54011"  default="false" />
 		<setting id="wolDelayOnLaunch" type="labelenum" label="54012" values="0|5|10|15|20" default="0" visible="eq(-1,true)" />
